--- a/public/style.css
+++ b/public/style.css
@@ -1,11 +1,8 @@
 @import url("font-awesome.min.css");
+@import url("css/bubbles.css");
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,900,300italic");
-
-/*
-	Dopetrope by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-*/
+@import url('https://fonts.googleapis.com/css?family=Euphoria+Script|Josefin+Slab');
+@import url('https://fonts.googleapis.com/css?family=Euphoria+Script|Raleway');
 
 /* Reset */
 
@@ -27,7 +24,7 @@
 	}
 
 	ol, ul {
-		list-style: none;
+		padding-left: 2em;
 	}
 
 	blockquote, q {
@@ -46,6 +43,7 @@
 
 	body {
 		-webkit-text-size-adjust: none;
+		font-family: 'Raleway', sans-serif;
 	}
 
 /* Box Model */
@@ -1069,7 +1067,7 @@
 /* Basic */
 
 	body {
-		background: #252122;
+		background: #252122 !important;
 		background-image: url("images/bg02.png");
 		font-family: 'Source Sans Pro';
 		font-weight: 300;
@@ -1123,6 +1121,7 @@
 	h1, h2, h3, h4, h5, h6 {
 		color: #252122;
 		font-weight: 700;
+        padding-bottom: 0.5em;
 	}
 
 	h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
@@ -1148,10 +1147,6 @@
 		border-top: solid 1px #dddddd;
 		height: 1px;
 		margin: 2em 0 2em 0;
-	}
-
-	p, ul, ol, dl, table {
-		margin-bottom: 2em;
 	}
 
 /* Form */
@@ -1251,16 +1246,27 @@
 /* Section/Article */
 
 	section, article {
-		margin-bottom: 2.5em;
+		margin-bottom: 0;
 	}
 
 		section > :last-child, section:last-child, article > :last-child, article:last-child {
 			margin-bottom: 0;
 		}
 
-	header > p {
-		display: block;
-		font-style: italic;
+        section > p {
+            font-size: 1em;
+            padding-top: 1em;
+        }
+
+    header > h2 {
+		font-family: 'Euphoria Script', cursive;
+        padding-bottom: 0.75em;
+    }
+
+	header > span {
+        padding: 5px 10px;
+        background-color: #eaeaea;
+        font-style: italic;
 	}
 
 	header.major {
@@ -1655,11 +1661,12 @@
 /* Banner */
 
 	#banner {
-		background: #CCE8F4 url("../../images/pic01.jpg");
+		background: #48303d;
 		background-position: center center;
 		background-size: auto 100%;
 		background-repeat: no-repeat;
 		text-align: center;
+        line-height: normal;
 	}
 
 		#banner header {
@@ -1773,17 +1780,17 @@
 			}
 
 			h2 {
-				font-size: 1.5em;
+				font-size: 2em;
 			}
 
 			h3 {
-				font-size: 1.35em;
+				font-size: 1.75em;
 			}
 
 		/* Section/Article */
 
 			header {
-				margin: 0 0 1.5em 0;
+				margin: 0;
 			}
 
 				header > p {
@@ -1813,7 +1820,7 @@
 
 				.box.post header {
 					padding-top: 1em;
-					margin: 0 0 2em 0;
+					margin: 0 0 1em 0;
 				}
 
 				.box.post h2 {
@@ -1881,7 +1888,7 @@
 		/* Wrappers */
 
 			#header-wrapper {
-				padding: 4.5em 0 4em 0;
+				padding: 1em 0;
 			}
 
 			#main-wrapper {
@@ -1917,13 +1924,12 @@
 		/* Nav */
 
 			#nav > ul {
-				margin: 0;
+				margin: 1em 0 0;
 			}
 
 				#nav > ul > li {
 					display: inline-block;
-					font-style: italic;
-					margin: 0 0.35em 0 0.35em;
+					margin: 0.35em;
 				}
 
 					#nav > ul > li > ul {
@@ -1931,14 +1937,16 @@
 					}
 
 					#nav > ul > li > a {
-						border-radius: 5px;
 						color: #5d5d5d;
 						text-decoration: none;
-						padding: 0.6em 1.2em 0.6em 1.2em;
-						-moz-transition: background-color .25s ease-in-out;
-						-webkit-transition: background-color .25s ease-in-out;
-						-ms-transition: background-color .25s ease-in-out;
-						transition: background-color .25s ease-in-out;
+						font-size: 24px;
+						font-weight: 100;
+						font-family: 'Euphoria Script', cursive;
+						padding: 0.2em 1.2em 0.2em 1.2em;
+						-moz-transition: background-color .3s ease-in-out;
+						-webkit-transition: background-color .3s ease-in-out;
+						-ms-transition: background-color .3s ease-in-out;
+						transition: background-color .3s ease-in-out;
 						outline: 0;
 					}
 
@@ -1946,64 +1954,16 @@
 						background: #f3f3f3;
 					}
 
-					#nav > ul > li.current > a {
-						background: #d52349;
-						color: #fff !important;
-						font-weight: 700;
-					}
+					#nav > ul > li > a.current {
+                        border-bottom: 1px solid #6d0f65;
+                    }
 
-			.dropotron {
-				border-radius: 5px;
-				background-color: #252122;
-				background-color: rgba(34, 30, 31, 0.98);
-				padding: 1.25em 1.5em 1.25em 1.5em;
-				font-style: italic;
-				min-width: 13em;
-				box-shadow: 0px 8px 15px 0px rgba(0, 0, 0, 0.5);
-				text-align: left;
-				margin-top: -1.25em;
-				margin-left: -1px;
-			}
-
-				.dropotron a, .dropotron span {
-					color: #aaa;
-					text-decoration: none;
-					-moz-transition: color .25s ease-in-out;
-					-webkit-transition: color .25s ease-in-out;
-					-ms-transition: color .25s ease-in-out;
-					transition: color .25s ease-in-out;
-				}
-
-				.dropotron li {
-					padding: 0.25em 0 0.25em 0;
-				}
-
-					.dropotron li:hover > a, .dropotron li:hover > span {
-						color: #fff;
-					}
-
-				.dropotron.level-0 {
-					margin-top: 2em;
-				}
-
-					.dropotron.level-0:before {
-						content: '';
-						display: block;
-						position: absolute;
-						left: 50%;
-						margin-left: -10px;
-						top: -9px;
-						border-left: solid 10px transparent;
-						border-right: solid 10px transparent;
-						border-bottom: solid 10px #252122;
-						border-bottom-color: rgba(34, 30, 31, 0.98);
-					}
 
 		/* Banner */
 
 			#banner {
 				position: relative;
-				padding: 8em 0;
+				padding: 4em 0;
 			}
 
 				#banner header {
@@ -2123,7 +2083,7 @@
 		/* Wrappers */
 
 			#header-wrapper {
-				padding: 3em 0 3em 0;
+				padding: 1em 0 3em 0;
 			}
 
 			#main-wrapper {
@@ -2150,13 +2110,6 @@
 
 			#header h1 {
 				margin: 0.25em 0 1em 0;
-			}
-
-		/* Banner */
-
-			#banner {
-				padding: 6em 0;
-				margin: 3em 0 0 0;
 			}
 
 		/* Intro */
@@ -2206,13 +2159,13 @@
 			}
 
 			h2, h3, h4, h5, h6 {
-				font-size: 1.25em;
+				font-size: 1.75em;
 			}
 
 		/* Section/Article */
 
 			section, article {
-				margin: 0 0 1.5em 0 !important;
+				margin: 0 !important;
 			}
 
 			header {
@@ -2461,7 +2414,7 @@
 			}
 
 			#header-wrapper {
-				padding: 2em 0;
+				padding: 1em 0;
 			}
 
 			#footer-wrapper {
@@ -2514,8 +2467,7 @@
 		/* Banner */
 
 			#banner {
-				margin: 2em 0 4em 0 !important;
-				padding: 6em 0;
+				padding: 3em 0;
 			}
 
 				#banner header {
