--- a/public/style.css
+++ b/public/style.css
@@ -1942,7 +1942,7 @@
 						font-size: 24px;
 						font-weight: 100;
 						font-family: 'Euphoria Script', cursive;
-						padding: 0.2em 1.2em 0.2em 1.2em;
+						padding: 0.1em 0.75em;
 						-moz-transition: background-color .3s ease-in-out;
 						-webkit-transition: background-color .3s ease-in-out;
 						-ms-transition: background-color .3s ease-in-out;
